# rust-lambda

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  samconfig.toml  template.yaml
api/: openapi.json
api/paths/: @hello.json
src/core/: handlers.rs
