[package]
authors = ["Sam Waterbury <samwaterbury1@gmail.com>"]
description = "Simple example demonstrating a serverless, Rust-powered API implementation."
edition = "2018"
name = "rust-lambda"
readme = "README.md"
repository = "https://github.com/samwaterbury/rust-lambda"
version = "0.1.0"

[lib]
name = "core"
path = "src/core/lib.rs"

[dependencies]
lambda_http = "0.1.1"
lambda_runtime = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
